# classify

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  NEWS  autogen.sh  class_globals.h  class_protos.h  classify.cc  classify.h  config.h.cmake  configure.ac  epm-header.in  time_stamp.c  time_stamp.h  unsuper_globals.h  voldiff.c
ann/: CMakeLists.txt  Makefile.am  Makefile.in  ann.cc  ann.h  ann.net  list  test_class.h
bayes/: CMakeLists.txt  Makefile.am  Makefile.in  bayes.c.960822  bayes.cc  bayes.h
cleantag/: CMakeLists.txt  Makefile.am  cleantag.cc
fcm/: CMakeLists.txt  Makefile.am  Makefile.in  fcm.cc  fcm.h
hcm/: CMakeLists.txt  Makefile.am  Makefile.in  hcm.cc  hcm.h
knn/: CMakeLists.txt  Makefile.am  Makefile.in  knn.cc  knn.h
mindist/: CMakeLists.txt  Makefile.am  Makefile.in  mindist.cc  mindist.h
models/: Makefile.am  ntags_1000_bg.tag  ntags_1000_prob_90_nobg.tag
scripts/: CMakeLists.txt  Makefile.am  classify_clean  classify_clean.in  classify_clean.pl  insect  insect.in  insect.pl
testing/: CMakeLists.txt  compare_classify_results.pl  tags.tag  tags_id.tag  tags_lb.tag
