# CMakeFiles.txt for the classify
#
# Vladimir S. FONOV - vladimir.fonov@gmail.com

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(classify)

#SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
# ENABLE_TESTING()
# INCLUDE(CTest)

#ADD_SUBDIRECTORY( doc )

# Packaging defines
SET(CPACK_GENERATOR TGZ)
SET(CPACK_PACKAGE_VERSION_MAJOR 1)
SET(CPACK_PACKAGE_VERSION_MINOR 1)
SET(CPACK_PACKAGE_VERSION_PATCH 10)
INCLUDE(CPack)


SET(PACKAGE "classify")
SET(PACKAGE_BUGREPORT "a.janke@gmail.com")

SET(PACKAGE_NAME "classify")
SET(PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

FIND_PACKAGE( MINC2 REQUIRED )
FIND_PACKAGE( EBTKS REQUIRED )
FIND_PACKAGE( Perl REQUIRED )
INCLUDE( ${MINC2_USE_FILE} )
INCLUDE( ${EBTKS_USE_FILE} )
LINK_LIBRARIES(${EBTKS_LIBRARIES} ${VOLUME_IO_LIBRARIES} ${MINC2_LIBRARIES})

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

# add for building relocatable library
# IF(UNIX)
#   SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
#   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
# ENDIF(UNIX)

# aliases
SET(VERSION "${PACKAGE_VERSION}")


# check for prereqs
# INCLUDE(CheckFunctionExists)
INCLUDE(CheckIncludeFiles)

# CHECK_FUNCTION_EXISTS(finite   HAVE_FINITE)
# CHECK_FUNCTION_EXISTS(isfinite HAVE_ISFINITE)

CHECK_INCLUDE_FILES(sys/dir.h   HAVE_SYS_DIR_H)
CHECK_INCLUDE_FILES(sys/stat.h  HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(unistd.h    HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(memory.h    HAVE_MEMORY_H)
CHECK_INCLUDE_FILES(malloc.h    HAVE_MALLOC_H)
CHECK_INCLUDE_FILES(stdlib.h    HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(inttypes.h  HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(string.h    HAVE_STRING_H)
CHECK_INCLUDE_FILES(strings.h   HAVE_STRINGS_H)

# others
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/config.h.cmake ${CMAKE_BINARY_DIR}/config.h)
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/epm-header.in ${CMAKE_BINARY_DIR}/epm-header)
SET(PERL ${PERL_EXECUTABLE})
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

ADD_SUBDIRECTORY(ann)
ADD_SUBDIRECTORY(bayes)
ADD_SUBDIRECTORY(fcm)
ADD_SUBDIRECTORY(hcm)
ADD_SUBDIRECTORY(knn) 
ADD_SUBDIRECTORY(mindist)
ADD_SUBDIRECTORY(scripts)
#ADD_SUBDIRECTORY(models) 
ADD_SUBDIRECTORY(cleantag)


ADD_EXECUTABLE(voldiff voldiff.c)
ADD_EXECUTABLE(classify time_stamp.c classify.cc)
TARGET_LINK_LIBRARIES(classify ann bayes fcm hcm knn mindist)


INSTALL(TARGETS 
  classify
  voldiff
  DESTINATION bin)


INSTALL(FILES
 models/ntags_1000_bg.tag  models/ntags_1000_prob_90_nobg.tag
 DESTINATION 
 share/classify )
#TODO install models 

# testing
# IF(BUILD_TESTING)
#   #ADD_SUBDIRECTORY( testing )
# ENDIF(BUILD_TESTING)
