# CMakeFiles.txt for the classify
#
# Vladimir S. FONOV - vladimir.fonov@gmail.com

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CLASSIFY_PACKAGE_VERSION_MAJOR 1)
SET(CLASSIFY_PACKAGE_VERSION_MINOR 1)
SET(CLASSIFY_PACKAGE_VERSION_PATCH 10)


IF(NOT MINC_TOOLKIT_BUILD)
  PROJECT(classify)

  # Packaging defines
  SET(CPACK_GENERATOR TGZ)
  SET(CPACK_PACKAGE_VERSION_MAJOR ${CLASSIFY_PACKAGE_VERSION_MAJOR})
  SET(CPACK_PACKAGE_VERSION_MINOR ${CLASSIFY_PACKAGE_VERSION_MINOR})
  SET(CPACK_PACKAGE_VERSION_PATCH ${CLASSIFY_PACKAGE_VERSION_PATCH})
  INCLUDE(CPack)

  FIND_PACKAGE( LIBMINC REQUIRED )
  FIND_PACKAGE( EBTKS REQUIRED )
  FIND_PACKAGE( Perl REQUIRED )
ENDIF(NOT MINC_TOOLKIT_BUILD)

SET(PACKAGE "classify")
SET(PACKAGE_BUGREPORT "a.janke@gmail.com")

SET(PACKAGE_NAME "classify")
SET(PACKAGE_VERSION "${CLASSIFY_PACKAGE_VERSION_MAJOR}.${CLASSIFY_PACKAGE_VERSION_MINOR}.${CLASSIFY_PACKAGE_VERSION_PATCH}")
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 99)

INCLUDE( ${LIBMINC_USE_FILE} )
INCLUDE( ${EBTKS_USE_FILE} )

LINK_DIRECTORIES(${EBTKS_LIBRARY_DIRS})

LINK_LIBRARIES(${EBTKS_LIBRARIES} ${VOLUME_IO_LIBRARIES} ${LIBMINC_LIBRARIES})

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

ENABLE_TESTING()
INCLUDE(CTest)

# aliases
SET(VERSION "${PACKAGE_VERSION}")

# check for prereqs
INCLUDE(CheckIncludeFiles)
INCLUDE(CheckSymbolExists)

CHECK_SYMBOL_EXISTS(finite      "math.h" HAVE_FINITE)
CHECK_SYMBOL_EXISTS(isfinite    "math.h" HAVE_ISFINITE)

CHECK_INCLUDE_FILES(sys/dir.h   HAVE_SYS_DIR_H)
CHECK_INCLUDE_FILES(sys/stat.h  HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(unistd.h    HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(memory.h    HAVE_MEMORY_H)
CHECK_INCLUDE_FILES(malloc.h    HAVE_MALLOC_H)
CHECK_INCLUDE_FILES(stdlib.h    HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(inttypes.h  HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(string.h    HAVE_STRING_H)
CHECK_INCLUDE_FILES(strings.h   HAVE_STRINGS_H)

# HACKY HACK
IF(APPLE)
  SET(HAVE_ISFINITE ON)
ENDIF(APPLE)

# others
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/epm-header.in  ${CMAKE_CURRENT_BINARY_DIR}/epm-header)
SET(PERL ${PERL_EXECUTABLE})
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )

ADD_SUBDIRECTORY(ann)
ADD_SUBDIRECTORY(bayes)
ADD_SUBDIRECTORY(fcm)
ADD_SUBDIRECTORY(hcm)
ADD_SUBDIRECTORY(knn) 
ADD_SUBDIRECTORY(mindist)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(cleantag)

ADD_EXECUTABLE(voldiff voldiff.c)
ADD_EXECUTABLE(classify time_stamp.c classify.cc)

TARGET_LINK_LIBRARIES(classify ann bayes fcm hcm knn mindist)


INSTALL(TARGETS 
  classify
  voldiff
  DESTINATION bin)


INSTALL(
 FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/models/ntags_1000_bg.tag  
  ${CMAKE_CURRENT_SOURCE_DIR}/models/ntags_1000_prob_90_nobg.tag
 DESTINATION 
  share/classify )

IF(BUILD_TESTING)
   ADD_SUBDIRECTORY( testing )
ENDIF(BUILD_TESTING)
