#CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/insect.in ${CMAKE_CURRENT_BINARY_DIR}/insect @ONLY)
#CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/classify_clean.in ${CMAKE_CURRENT_BINARY_DIR}/classify_clean @ONLY)


INSTALL(PROGRAMS
  ${CMAKE_CURRENT_SOURCE_DIR}/classify_clean
  ${CMAKE_CURRENT_SOURCE_DIR}/insect
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ  WORLD_EXECUTE WORLD_READ
   DESTINATION bin )
